Changes for 3.4.9rc1

New features:

Bug fixes:
....I..... [ZBX-12756] improved configure script to check iconv library (MVekslers)
........S. [ZBX-13667] added notification in zabbix server log about 'error' in elasticsearch json response (MVekslers)
..F....... [ZBX-13683] fixed multiselect items not being sorted by name (agriscenko)
........S. [ZBX-13299] fixed autoregistration, discovery and internal notifications not being sent due to uninitialized severity (vso)
....I..... [ZBX-13607] changed ping script to return success also for timeouts (wiper)
..F....... [ZBX-12967] fixed slide show refresh interval multiplier menu not working (agriscenko)
........S. [ZBX-13696] added maximum record limit to old session removal in housekeeper (wiper)
..F....... [ZBX-13642] fixed undefined index in user edit form (agriscenko)
..F....... [ZBX-13668] fixed dynamic widget searching for item key in item prototypes (agriscenko)
..F....... [ZBX-13500] fixed fractional values in triggers being misinterpreted without a leading 0 (agriscenko)
..F....... [ZBX-13561] fixed incorrectly displayed pie graph when first item has no data (Ivo)
..F....... [ZBX-13517] fixed undefined index in pie charts (Ivo)
..F....... [ZBX-13499] fixed checkbox selector in problems table (ashubin, miks)
........S. [ZBX-13598] fixed crash when Zabbix process cannot connect to preprocessing service (viktors, vso)
..F....... [ZBX-13625] fixed blinking in the problem widget (agriscenko)
..F....... [ZBX-13560] fixed acknowledge notifications being visible in the event popup (agriscenko)
..F....... [ZBX-13298] fixed missing graph after faulty graph edit form submission (nikita)

--------------------------------------------------------------------------------
Changes for 3.4.8

3.4.8rc1 was released as 3.4.8 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.8rc1

New features: