@@ -3,6 +3,7 @@ Changes for 3.4.9rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-13685] fixed maintenance entries displayed in list when filter is applied (agriscenko)
 ....I..... [ZBX-12756] improved configure script to check iconv library (MVekslers)
 ........S. [ZBX-13667] added notification in zabbix server log about 'error' in elasticsearch json response (MVekslers)
 ..F....... [ZBX-13683] fixed multiselect items not being sorted by name (agriscenko)
